--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
     <version>1.0.0</version>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>notification-processor</module>
+    </modules>
+
     <properties>
         <java.version>21</java.version>
     </properties>
