--- a/notification-processor/src/main/resources/application.yml
+++ b/notification-processor/src/main/resources/application.yml
@@ -8,3 +8,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/notifications
     user: postgres
     password: postgres
+  kafka:
+    bootstrap-servers: localhost:29092
+    producer:
+      acks: all
