Scheduled task for sending email notifications to kafka queue

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>notification-common</module>
         <module>notification-processor</module>
     </modules>
 
