--- a/notification-processor/pom.xml
+++ b/notification-processor/pom.xml
@@ -45,6 +45,11 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-database-postgresql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.mosturkov</groupId>
+            <artifactId>notification-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
         <!--Test-->
         <dependency>
