--- a/notification-processor/src/main/resources/application.yml
+++ b/notification-processor/src/main/resources/application.yml
@@ -12,3 +12,12 @@ spring:
     bootstrap-servers: localhost:29092
     producer:
       acks: all
+      properties:
+        enable.idempotence: true
+
+# Custom
+kafka:
+  topics:
+    email-notifications: email-notifications
+    sms-notifications: sms-notifications
+    slack-notifications: slack-notifications
