Add Notification sender module

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>notification-common</module>
         <module>notification-processor</module>
+        <module>notification-sender</module>
     </modules>
 
     <properties>
