Create Mock metadata module with mock user data

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>notification-common</module>
         <module>notification-processor</module>
         <module>notification-sender</module>
+        <module>org-metadata</module>
     </modules>
 
     <properties>
