--- a/notification-sender/src/main/resources/application.yml
+++ b/notification-sender/src/main/resources/application.yml
@@ -18,3 +18,6 @@ kafka:
     slack-notifications:
       name: slack-notifications
       partitions: 5
+
+org-metadata:
+  base-url: ${ORG_METADATA_BASE_URL:`http://localhost:8083`}
