--- a/notification-processor/src/main/resources/application.yml
+++ b/notification-processor/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: ${DB_URL:`jdbc:postgresql://localhost:5432/notifications`}
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/notifications}
     username: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD:postgres}
   flyway:
-    url: ${DB_URL:`jdbc:postgresql://localhost:5432/notifications`}
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/notifications}
     user: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD:postgres}
   kafka:
-    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVER:`localhost:29092`}
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVER:localhost:29092}
     producer:
       acks: all
 
